fixed issue #16 on firefox

--- a/angular/app/sidebar/sidebar.less
+++ b/angular/app/sidebar/sidebar.less
@@ -26,6 +26,10 @@
 	background-color: rgba(158, 158, 158, 0.2) !important;
 }
 
+.Sidebar-page{
+	cursor: pointer;
+}
+
 .Sidebar-page div{
 	width: 100%;
 }
