--- a/public/css/app.css
+++ b/public/css/app.css
@@ -55,6 +55,9 @@
 .Sidebar-pages md-list md-list-item button.md-button:not([disabled]):hover {
   background-color: rgba(158, 158, 158, 0.2) !important;
 }
+.Sidebar-page {
+  cursor: pointer;
+}
 .Sidebar-page div {
   width: 100%;
 }
